Update Convite de Casamento.html

--- a/Convite de Casamento.html
+++ b/Convite de Casamento.html
@@ -8,24 +8,38 @@ img {
  width: 100%;
  object-fit: contain;
 }
-  * {
-  padding:0;
-  margin:0;
-}
-.casamento {
+
+#casamento {
   display: table;
   width: auto;
   height: auto;
-  background: no-repeat center;
-  background-position: 30% 45%;
+  background: no-repeat;
   background-size: cover;
   object-fit: contain;
 }
+#main-banner-content {
+  height: 40%;
+  width: 40%;
+  position: relative; 
+    left: 50%; 
+    margin-left: -1100px; 
+    top: 50%; 
+    margin-top: -725px;
+}
+
+
 </style>
     </head>
     <body>
-<div .casamento>
-  <img src=https://vanessaeageu.github.io/Convite%20casamento%20Online%20VA.png>
-</div>
+      <div id="casamento">
+        <img src=https://vanessaeageu.github.io/Convite%20casamento%20Online%20VA.png>
+        <center>
+          <div id="main-banner-content">
+          <a href="https://youtu.be/fbLqkheCvVk">
+            <img src="https://vanessaeageu.github.io/2d33be96-4481-4209-be4b-afda21b884b7.png">
+          </a>
+        </div>
+      </center>
+      </div>
     </body>
 </html>
